--- a/SRC/MCQGenerator/mcqgen.ipynb
+++ b/SRC/MCQGenerator/mcqgen.ipynb
@@ -15,6 +15,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.chains import SequentialChain\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "import PyPDF2 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -147,23 +161,6 @@
    ],
    "source": [
     "llm = ChatOpenAI(openai_api_key = key,model_name= 'gpt-3.5-turbo' , temperature = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YES\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"YES\")"
    ]
   },
   {
